@@ -494,7 +494,7 @@
                 <h>upper triangular</h>
             </idx>
             <statement>
-                <p>The <m>n\times n</m> square matrix <m>A</m> is <term>upper triangular</term> if <m>\matrixentry{A}{ij}=0</m> whenever <m>i\gt j</m>.</p>
+                <p>The square matrix <m>A</m> is <term>upper triangular</term> if <m>\matrixentry{A}{ij}=0</m> whenever <m>i\gt j</m>.</p>
             </statement>
         </definition>
         <definition xml:id="definition-LTM" acro="LTM">
@@ -505,7 +505,7 @@
                 <h>lower triangular</h>
             </idx>
             <statement>
-                <p>The <m>n\times n</m> square matrix <m>A</m> is <term>lower triangular</term> if <m>\matrixentry{A}{ij}=0</m> whenever <m>i\lt j</m>.</p>
+                <p>The square matrix <m>A</m> is <term>lower triangular</term> if <m>\matrixentry{A}{ij}=0</m> whenever <m>i\lt j</m>.</p>
             </statement>
         </definition>
         <p>So an upper triangular matrix has all its entries <q>below</q> the diagonal equal to zero, and a lower triangular matrix has all its entries <q>above</q> the diagonal equal to zero.</p>
@@ -516,15 +516,17 @@
                 <p>The matrix <m>U</m> is upper triangular, while <m>L</m> is lower triangular.<md>
                     <mrow>
                     U &amp;=\begin{bmatrix}
-                    5 &amp; -3 &amp; 7 \\
-                    0 &amp;  6 &amp; 0 \\
-                    0 &amp;  0 &amp; 3
+                    5 &amp; -3 &amp; 7 &amp; -2\\
+                    0 &amp;  6 &amp; 9 &amp;  0\\
+                    0 &amp;  0 &amp; 3 &amp;  4\\
+                    0 &amp;  0 &amp; 0 &amp; -5
                     \end{bmatrix}
                     &amp;
                     L &amp;=\begin{bmatrix}
-                     5 &amp;  0 &amp; 0 \\
-                     2 &amp;  0 &amp; 0 \\
-                    -8 &amp; -2 &amp; 6
+                     5 &amp;  0 &amp;  0 &amp; 0\\
+                     2 &amp;  0 &amp;  0 &amp; 0\\
+                    -8 &amp; -2 &amp;  6 &amp; 0\\
+                     3 &amp;  5 &amp; -1 &amp; 7
                     \end{bmatrix}
                     </mrow>
                 </md></p>
@@ -550,6 +552,12 @@
                 </case>
             </proof>
         </theorem>
+        <example xml:id="example-NSTM" acro="NSTM">
+            <title>Nonsingular and singular triangular matrices</title>
+            <statement>
+                <p>We can now see immediately with <xref ref="theorem-NTM"/> that the matrix <m>U</m> of <xref ref="example-ULTM"/> is nonsingular, and the matrix <m>L</m> of <xref ref="example-ULTM"/> is singular.</p>
+            </statement>
+        </example>
     </subsection>
     <subsection xml:id="subsection-MO-MCC" acro="MCC">
         <title>Matrices and Complex Conjugation</title>
