@@ -33,7 +33,8 @@ algebraic multiplicities.
 *  Move definitions and results for triangular matrices.
 Definitions UTM and LTM move from Section OD to Section MO,
 with new Example ULTM.  Theorem NTM new in Section MO,
-describes nonsingular triangular matrices.
+describes nonsingular triangular matrices, with Example NSTM
+to illustrate.
 
 v X.XX
 ~~~~~~~~~~~~~~~~
@@ -47,6 +48,7 @@ New: Exercise PD.T60, alternate solution using Theorem SID
 New: Theorem ESM, formalizing an eigenvalue discussion
 New: Example ULTM, examples of triangular matrices
 New: Theorem NTM, nonsingular triangular matrices
+New: Example NSTM, nonsingular triangular matrices
 New: Example UE, unknown eigenvalues
 Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
 Edit: Theorem EDYES, substantially shorten proof
